# llm-delusions-annotations

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/data/: annotations.csv
src/llm_delusions_annotations/: annotation_ids.py  annotation_metadata.py  annotation_prompts.py  annotator.py  annotator_cli.py  annotator_demo.py  classify_messages.py  configs.py  cutoffs.py  utils.py
src/llm_delusions_annotations/chat/: __init__.py  chat_io.py  chat_utils.py
src/llm_delusions_annotations/data/: annotations.csv  cutoffs.csv
src/llm_delusions_annotations/llm_utils/: client.py
src/llm_delusions_annotations/tests/: test_annotator.py
